refactor: Post, User id를 외래키로 연관관계 설정